--- a/css-resource/contactus.css
+++ b/css-resource/contactus.css
@@ -1,5 +1,3 @@
-@import url(./css-resource/index.css);
-
 
 *{
     margin: 0;
@@ -53,7 +51,7 @@ ul{
 
 .text-custom:focus{
     background: rgba(0, 0, 0, 0.7);  
-    color: white;
+    color: black;
 }
 
 .fa, .fas{
