--- a/css-resource/contactus.css
+++ b/css-resource/contactus.css
@@ -13,7 +13,7 @@
 }
 
 .section-bg{
-    background-image: url(./img/bg.jpg);
+    background-image: url(img/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     
